@@ -44,6 +44,7 @@
   *  - All project makefiles now correctly clean intermediate build files from assembly and C++ sources (thanks to Daniel Czigany)
   *  - Removed the EVENT_USB_InitFailure() event, not specifying a USB mode now defaults to UID selection mode
   *  - Renamed and moved class driver common constant definitions to make the naming scheme more uniform
+  *  - Changed default value for the reset polarity parameter in the AVRISP-MKII project so that it defaults to active low drive
   *
   *  <b>Fixed:</b>
   *  - Fixed USB_GetHIDReportItemInfo() function modifying the given report item's data when the report item does not exist
@@ -64,6 +65,7 @@
   *  - Fixed incorrect command name for EEPROM memory programming in the makefile dfu-ee target
   *  - Fixed BootloaderCDC project failing on some operating systems due to removed Line Encoding options (thanks to Alexey Belyaev)
   *  - Fixed incorrect LEDs_ChangeLEDs() function in the Benito board LED driver
+  *  - Fixed incorrect USB_DeviceState value when unconfiguring the device without an address set
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
